--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div id="songchoice">
 				<h1>PERFECT.</h1>
 				<p>"{{chosenTrack.name}}" By {{chosenArtist.name}}</p>
-				<div id="chosenSong" class="album-art" ng-click="play(chosenTrack.preview.url)">
+				<div id="chosenSong" class="album-art" ng-click="play(chosenTrack.preview_url)">
 	                <img src="{{chosenTrack.album.images[0].url}}"/>
 				</div>
 			</div>
